--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div class="top">
+                <form action="">
+                    <label for="search"></label>
+                    <input type="text" id="search" placeholder="Search" name="search">
+                </form>
+                <p>Bell Icon</p>
+                <p>User IMG</p>
+                <p>User Name</p>
+            </div>
+            <div class="bottom">
+                <p>User IMG</p>
+                <p>User Name</p>
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+        <div class="sidebar">
+        </div>
+        <div class="board">
+        </div>
+    </div>
 </body>
 </html>
