Add Layout Components

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="top">
+            <div class="header-top">
                 <form action="">
                     <label for="search"></label>
                     <input type="text" id="search" placeholder="Search" name="search">
@@ -18,7 +18,7 @@
                 <p>User IMG</p>
                 <p>User Name</p>
             </div>
-            <div class="bottom">
+            <div class="header-bottom">
                 <p>User IMG</p>
                 <p>User Name</p>
                 <button>New</button>
@@ -27,8 +27,26 @@
             </div>
         </div>
         <div class="sidebar">
+            <div class="sidebar-top">
+                <p>Logo</p>
+                <p>Home</p>
+                <p>Profile</p>
+                <p>Messages</p>
+                <p>History</p>
+                <p>Tasks</p>
+                <p>Communities</p>
+            </div>
+            <div class="sidebar-bottom">
+                <p>Settings</p>
+                <p>Support</p>
+                <p>Privacy</p>
+            </div>
         </div>
         <div class="board">
+            <div class="board-main">
+                
+            </div>
+            <div class="board-side"></div>
         </div>
     </div>
 </body>
