Add Grid Layout for Cards

--- a/index.html
+++ b/index.html
@@ -43,9 +43,16 @@
             </div>
         </div>
         <div class="board">
+            <div class="board-header">My Projects</div>
             <div class="board-main">
-                
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
             </div>
+            <div class="board-footer"></div>
             <div class="board-side"></div>
         </div>
     </div>
