--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
                 <div class="card"></div>
             </div>
             <div class="board-footer"></div>
-            <div class="board-side"></div>
+            <div class="board-side-header">Other Stuff</div>
+            <div class="board-side">
+                <div class="side-card"></div>
+                <div class="second-side-card">
+                    <p>More Stuff</p>
+                    <div class="card2">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
