Add Styling and Content to Side Card 1

--- a/index.html
+++ b/index.html
@@ -103,12 +103,18 @@
                 </div>
             </div>
             <div class="board-footer"></div>
-            <div class="board-side-header">Other Stuff</div>
+            <div class="board-side-header">Announcements</div>
             <div class="board-side">
-                <div class="side-card"></div>
+                <div class="side-card">
+                    <h3>Site Maintenance</h3>
+                    <div class="side-card-content divider">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti officiis facere sunt beatae natus culpa eligendi harum enim.</div>
+                    <h3>Updated Privacy Policy</h3>
+                    <div class="side-card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti officiis facere sunt beatae natus culpa eligendi harum enim.</div>
+                </div>
                 <div class="second-side-card">
                     <p>More Stuff</p>
                     <div class="card2">
+                        
                     </div>
                 </div>
             </div>
