--- a/index.html
+++ b/index.html
@@ -112,9 +112,36 @@
                     <div class="side-card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti officiis facere sunt beatae natus culpa eligendi harum enim.</div>
                 </div>
                 <div class="second-side-card">
-                    <p>More Stuff</p>
+                    <p>Related Users</p>
                     <div class="card2">
-                        
+                        <div class="card2-content first">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>account-circle</title><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
+                            <div class="g2">
+                                <h3>@zuko</h3>
+                                <p>Redeemed Firebender</p>
+                            </div>
+                        </div>
+                        <div class="card2-content second">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>account-circle</title><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
+                            <div class="g2">
+                                <h3>@aang</h3>
+                                <p>Last Airbender</p>
+                            </div>
+                        </div>
+                        <div class="card2-content third">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>account-circle</title><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
+                            <div class="g2">
+                                <h3>@toph</h3>
+                                <p>Blind Earthbender</p>
+                            </div>
+                        </div>
+                        <div class="card2-content fourth">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>account-circle</title><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
+                            <div class="g2">
+                                <h3>@kataraandsokka</h3>
+                                <p>Southern Water Tribe Siblings</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
