--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="user">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>bell-ring-outline</title><path d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" /></svg>
-                    <img class="user-img"src="/11433900_20424727.svg" alt="user image">
+                    <img class="user-img"src="screenshots/11433900_20424727.svg" alt="user image">
                     <p>Christopher Sanders</p>
                 </div>
             </div>
@@ -79,7 +79,7 @@
             <div class="board-main">
                 <div class="card">
                     <h1>Project: Sign-up Form</h1>
-                    <img class="screenshot" src="/Screenshot (18).png" alt="Sign-up Form Screenshot">
+                    <img class="screenshot" src="screenshots/Screenshot (18).png" alt="Sign-up Form Screenshot">
                     <div class="icons">
                         <a target="_blank" href="https://sdupsy.github.io/odin-sign-up-form/">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>eye-outline</title><path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" /></svg>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="card">
                     <h1>Project: Calculator</h1>
-                    <img class="screenshot" src="/Screenshot (19).png" alt="Calculator Screenshot">
+                    <img class="screenshot" src="screenshots/Screenshot (19).png" alt="Calculator Screenshot">
                     <div class="icons">
                         <a target="_blank" href="https://sdupsy.github.io/odin-calculator/">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>eye-outline</title><path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" /></svg>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="card">
                     <h1>Project: Etch-a-Sketch</h1>
-                    <img class="screenshot" src="/Screenshot (20).png" alt="Etch a Sketch Screenshot">
+                    <img class="screenshot" src="screenshots/Screenshot (20).png" alt="Etch a Sketch Screenshot">
                     <div class="icons">
                         <a target="_blank" href="https://sdupsy.github.io/odin-etch-a-sketch/">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>eye-outline</title><path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" /></svg>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="card">
                     <h1>Project: Rock Paper Scissors</h1>
-                    <img class="screenshot" src="/Screenshot (21).png" alt="Rock Paper Scissors Screenshot">
+                    <img class="screenshot" src="screenshots/Screenshot (21).png" alt="Rock Paper Scissors Screenshot">
                     <div class="icons">
                         <a target="_blank" href="https://sdupsy.github.io/odin-rock-paper-scissors/">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>eye-outline</title><path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" /></svg>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="card">
                     <h1>Project: Landing Page</h1>
-                    <img class="screenshot" src="/Screenshot (22).png" alt="Landing Page Screenshot">
+                    <img class="screenshot" src="screenshots/Screenshot (22).png" alt="Landing Page Screenshot">
                     <div class="icons">
                         <a target="_blank" href="https://sdupsy.github.io/odin-project-landing-page/">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>eye-outline</title><path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" /></svg>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="card">
                     <h1>Project: Recipes</h1>
-                    <img class="screenshot" src="/Screenshot (23).png" alt="Recipes Screenshot">
+                    <img class="screenshot" src="screenshots/Screenshot (23).png" alt="Recipes Screenshot">
                     <div class="icons">
                         <a target="_blank" href="https://sdupsy.github.io/odin-recipes/">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>eye-outline</title><path d="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" /></svg>
